--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <!-- Profile Image -->
       <div id="main-profile-image">
-          <img src="/assets/profile.jpg" alt="Profile Image" />
+          <img src="app/assets/images/profile.jpg" alt="Profile Image" />
       </div>
 
       <div class="outer-wrapper">
