--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -113,3 +113,4 @@
 
 
 <% base_url = Rails.env.to_s == "development" ? "http://localhost:3000" : "https://staging.spotgini.com" %>
+<script id="load_ry_widget" src="https://staging.spotgini.com/embed?provider_id=azVkcU9MYVdDKzRMTURlNktDVGFNZz09LS02QkdrRzd0eDJLaW1aK1lHbHBRc0J3PT0=--6b1dc4755fb9a6fc3417a6a899bd867a4b0684cc" data-page="1" async defer></script>
